# openairplay

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
openairplay/: discovery.py  gui_main.py  log.py  receiver_device.py  utils.py
